[package]
name = "ha-doorbell"
version = "0.1.0"
edition = "2021"

[dependencies]
hass-rs = "0.3.1"
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.4.0"
futures-util = "0.3.30"
async-tungstenite = "0.25.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio-tungstenite = "0.23.1"
reqwest = "0.12.4"
bytes = "1.6.0"
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
